mejorar archivos de configuracion

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ var blankSrc = "wpscripts/blank.gif";
 
 <img src="wpimages/wp86f46bbb_06.png" width="929" height="45" border="0" id="pic_259" alt="" onload="OnLoadPngFix()" style="position:absolute;left:16px;top:348px;">
 
-<form id="form_1" name="contacto" onsubmit="return validate_form_1(this)" action="http://www.4milfundadores.com/contacto.php" accept-charset="UTF-8" method="post" target="_self" enctype="application/x-www-form-urlencoded" style="margin:0px;">
+<form id="form_1" name="contacto" onsubmit="return validate_form_1(this)" action="contacto.php" accept-charset="UTF-8" method="post" target="_self" enctype="application/x-www-form-urlencoded" style="margin:0px;">
 
 <input type="text" id="edit_1" name="nombre" value="" style="position:absolute; left:30px; top:359px; width:216px; /*Tag Style*/ border:none " __AddCode="here" placeholder="  TU NOMBRE">
 
